# ExchangeProject

./: CMakeLists.txt  ExchangeProject.slnx  README.md
ExchangeProject/: Exchange.cpp  Exchange.hpp  ExchangeProject.vcxproj  ExchangeProject.vcxproj.filters  KuCoin.cpp  KuCoin.hpp  Log.txt  Logger.cpp  Logger.hpp  main.cpp
